# Melora

./: .env.example  .gitignore  README.md  backlink.html  download.html  package-lock.json  package.json
.claude/: launch.json  settings.local.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  EULA.rtf  melora-release.keystore  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/web/: .env.example  .env.production  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/public/: embed-test.html
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: BottomPlayer.tsx  CadenceToggle.tsx  FilterBar.tsx  MobileFeed.tsx  SpotifySetup.tsx  TrackCard.tsx
apps/web/src/hooks/: useIsMobile.ts  useMeloraApp.ts  useSpotifyEmbed.ts
apps/web/src/lib/: artist-genres.ts  bpm-detector.ts  bpm-lookup.ts  spotify-auth.ts
releases/: versions.json
releases/latest/: version.json
scripts/: release.mjs
